src/libqwidget.h

typedef struct QCursor QCursor;
typedef struct QGraphicsProxyWidget QGraphicsProxyWidget;
typedef struct QKeySequence QKeySequence;
typedef struct QLayout QLayout;
typedef struct QLocale QLocale;
typedef struct QMargins QMargins;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QSize QSize;
typedef struct QSizePolicy QSizePolicy;
typedef struct QWidget QWidget;
void QWidget_SetWindowIconText(QWidget* self, libqt_string windowIconText);
libqt_string QWidget_WindowIconText(const QWidget* self);
void QWidget_SetWindowRole(QWidget* self, libqt_string windowRole);
libqt_string QWidget_WindowRole(const QWidget* self);
void QWidget_SetWindowFilePath(QWidget* self, libqt_string filePath);
libqt_string QWidget_WindowFilePath(const QWidget* self);
void QWidget_SetWindowOpacity(QWidget* self, double level);
double QWidget_WindowOpacity(const QWidget* self);
bool QWidget_IsWindowModified(const QWidget* self);
void QWidget_SetToolTip(QWidget* self, libqt_string toolTip);
libqt_string QWidget_ToolTip(const QWidget* self);
void QWidget_SetToolTipDuration(QWidget* self, int msec);
int QWidget_ToolTipDuration(const QWidget* self);
void QWidget_SetStatusTip(QWidget* self, libqt_string statusTip);
libqt_string QWidget_StatusTip(const QWidget* self);
void QWidget_SetWhatsThis(QWidget* self, libqt_string whatsThis);
libqt_string QWidget_WhatsThis(const QWidget* self);
libqt_string QWidget_AccessibleName(const QWidget* self);
void QWidget_SetAccessibleName(QWidget* self, libqt_string name);
libqt_string QWidget_AccessibleDescription(const QWidget* self);
void QWidget_SetAccessibleDescription(QWidget* self, libqt_string description);
void QWidget_SetLayoutDirection(QWidget* self, int direction);
int QWidget_LayoutDirection(const QWidget* self);
void QWidget_UnsetLayoutDirection(QWidget* self);
void QWidget_SetLocale(QWidget* self, QLocale* locale);
QLocale* QWidget_Locale(const QWidget* self);
void QWidget_UnsetLocale(QWidget* self);
bool QWidget_IsRightToLeft(const QWidget* self);
bool QWidget_IsLeftToRight(const QWidget* self);
void QWidget_SetFocus(QWidget* self);
bool QWidget_IsActiveWindow(const QWidget* self);
void QWidget_ActivateWindow(QWidget* self);
void QWidget_ClearFocus(QWidget* self);
void QWidget_SetFocusWithReason(QWidget* self, int reason);
int QWidget_FocusPolicy(const QWidget* self);
void QWidget_SetFocusPolicy(QWidget* self, int policy);
bool QWidget_HasFocus(const QWidget* self);
void QWidget_SetTabOrder(QWidget* param1, QWidget* param2);
void QWidget_SetFocusProxy(QWidget* self, QWidget* focusProxy);
QWidget* QWidget_FocusProxy(const QWidget* self);
int QWidget_ContextMenuPolicy(const QWidget* self);
void QWidget_SetContextMenuPolicy(QWidget* self, int policy);
void QWidget_GrabMouse(QWidget* self);
void QWidget_GrabMouseWithQCursor(QWidget* self, QCursor* param1);
void QWidget_ReleaseMouse(QWidget* self);
void QWidget_GrabKeyboard(QWidget* self);
void QWidget_ReleaseKeyboard(QWidget* self);
int QWidget_GrabShortcut(QWidget* self, QKeySequence* key);
void QWidget_ReleaseShortcut(QWidget* self, int id);
void QWidget_SetShortcutEnabled(QWidget* self, int id);
void QWidget_SetShortcutAutoRepeat(QWidget* self, int id);
QWidget* QWidget_MouseGrabber();
QWidget* QWidget_KeyboardGrabber();
bool QWidget_UpdatesEnabled(const QWidget* self);
void QWidget_SetUpdatesEnabled(QWidget* self, bool enable);
QGraphicsProxyWidget* QWidget_GraphicsProxyWidget(const QWidget* self);
void QWidget_Update(QWidget* self);
void QWidget_Repaint(QWidget* self);
void QWidget_Update2(QWidget* self, int x, int y, int w, int h);
void QWidget_UpdateWithQRect(QWidget* self, QRect* param1);
void QWidget_UpdateWithQRegion(QWidget* self, QRegion* param1);
void QWidget_Repaint2(QWidget* self, int x, int y, int w, int h);
void QWidget_RepaintWithQRect(QWidget* self, QRect* param1);
void QWidget_RepaintWithQRegion(QWidget* self, QRegion* param1);
void QWidget_SetVisible(QWidget* self, bool visible);
void QWidget_SetHidden(QWidget* self, bool hidden);
void QWidget_Show(QWidget* self);
void QWidget_Hide(QWidget* self);
void QWidget_ShowMinimized(QWidget* self);
void QWidget_ShowMaximized(QWidget* self);
void QWidget_ShowFullScreen(QWidget* self);
void QWidget_ShowNormal(QWidget* self);
bool QWidget_Close(QWidget* self);
void QWidget_Raise(QWidget* self);
void QWidget_Lower(QWidget* self);
void QWidget_StackUnder(QWidget* self, QWidget* param1);
void QWidget_Move(QWidget* self, int x, int y);
void QWidget_MoveWithQPoint(QWidget* self, QPoint* param1);
void QWidget_Resize(QWidget* self, int w, int h);
void QWidget_ResizeWithQSize(QWidget* self, QSize* param1);
void QWidget_SetGeometry(QWidget* self, int x, int y, int w, int h);
void QWidget_SetGeometryWithGeometry(QWidget* self, QRect* geometry);
libqt_string QWidget_SaveGeometry(const QWidget* self);
bool QWidget_RestoreGeometry(QWidget* self, libqt_string geometry);
void QWidget_AdjustSize(QWidget* self);
bool QWidget_IsVisible(const QWidget* self);
bool QWidget_IsVisibleTo(const QWidget* self, QWidget* param1);
bool QWidget_IsHidden(const QWidget* self);
bool QWidget_IsMinimized(const QWidget* self);
bool QWidget_IsMaximized(const QWidget* self);
bool QWidget_IsFullScreen(const QWidget* self);
int QWidget_WindowState(const QWidget* self);
void QWidget_SetWindowState(QWidget* self, int state);
void QWidget_OverrideWindowState(QWidget* self, int state);
QSize* QWidget_SizeHint(const QWidget* self);
QSize* QWidget_MinimumSizeHint(const QWidget* self);
QSizePolicy* QWidget_SizePolicy(const QWidget* self);
void QWidget_SetSizePolicy(QWidget* self, QSizePolicy* sizePolicy);
void QWidget_SetSizePolicy2(QWidget* self, int horizontal, int vertical);
int QWidget_HeightForWidth(const QWidget* self, int param1);
bool QWidget_HasHeightForWidth(const QWidget* self);
QRegion* QWidget_VisibleRegion(const QWidget* self);
void QWidget_SetContentsMargins(QWidget* self, int left, int top, int right, int bottom);
void QWidget_SetContentsMarginsWithMargins(QWidget* self, QMargins* margins);
QMargins* QWidget_ContentsMargins(const QWidget* self);
QRect* QWidget_ContentsRect(const QWidget* self);
QLayout* QWidget_Layout(const QWidget* self);
void QWidget_SetLayout(QWidget* self, QLayout* layout);
void QWidget_UpdateGeometry(QWidget* self);