src/libqwidget.bf

	[LinkName("QWidget_SetWindowIconText")]
	public static extern void QWidget_SetWindowIconText(void* c_this, char8[] windowIconText);
	[LinkName("QWidget_WindowIconText")]
	public static extern char8[] QWidget_WindowIconText(void* c_this);
	[LinkName("QWidget_SetWindowRole")]
	public static extern void QWidget_SetWindowRole(void* c_this, char8[] windowRole);
	[LinkName("QWidget_WindowRole")]
	public static extern char8[] QWidget_WindowRole(void* c_this);
	[LinkName("QWidget_SetWindowFilePath")]
	public static extern void QWidget_SetWindowFilePath(void* c_this, char8[] filePath);
	[LinkName("QWidget_WindowFilePath")]
	public static extern char8[] QWidget_WindowFilePath(void* c_this);
	[LinkName("QWidget_SetWindowOpacity")]
	public static extern void QWidget_SetWindowOpacity(void* c_this, double level);
	[LinkName("QWidget_WindowOpacity")]
	public static extern double QWidget_WindowOpacity(void* c_this);
	[LinkName("QWidget_IsWindowModified")]
	public static extern bool QWidget_IsWindowModified(void* c_this);
	[LinkName("QWidget_SetToolTip")]
	public static extern void QWidget_SetToolTip(void* c_this, char8[] toolTip);
	[LinkName("QWidget_ToolTip")]
	public static extern char8[] QWidget_ToolTip(void* c_this);
	[LinkName("QWidget_SetToolTipDuration")]
	public static extern void QWidget_SetToolTipDuration(void* c_this, int32 msec);
	[LinkName("QWidget_ToolTipDuration")]
	public static extern int32 QWidget_ToolTipDuration(void* c_this);
	[LinkName("QWidget_SetStatusTip")]
	public static extern void QWidget_SetStatusTip(void* c_this, char8[] statusTip);
	[LinkName("QWidget_StatusTip")]
	public static extern char8[] QWidget_StatusTip(void* c_this);
	[LinkName("QWidget_SetWhatsThis")]
	public static extern void QWidget_SetWhatsThis(void* c_this, char8[] whatsThis);
	[LinkName("QWidget_WhatsThis")]
	public static extern char8[] QWidget_WhatsThis(void* c_this);
	[LinkName("QWidget_AccessibleName")]
	public static extern char8[] QWidget_AccessibleName(void* c_this);
	[LinkName("QWidget_SetAccessibleName")]
	public static extern void QWidget_SetAccessibleName(void* c_this, char8[] name);
	[LinkName("QWidget_AccessibleDescription")]
	public static extern char8[] QWidget_AccessibleDescription(void* c_this);
	[LinkName("QWidget_SetAccessibleDescription")]
	public static extern void QWidget_SetAccessibleDescription(void* c_this, char8[] description);
	[LinkName("QWidget_SetLayoutDirection")]
	public static extern void QWidget_SetLayoutDirection(void* c_this, int64 direction);
	[LinkName("QWidget_LayoutDirection")]
	public static extern int64 QWidget_LayoutDirection(void* c_this);
	[LinkName("QWidget_UnsetLayoutDirection")]
	public static extern void QWidget_UnsetLayoutDirection(void* c_this);
	[LinkName("QWidget_SetLocale")]
	public static extern void QWidget_SetLocale(void* c_this, QLocale locale);
	[LinkName("QWidget_Locale")]
	public static extern QLocale QWidget_Locale(void* c_this);
	[LinkName("QWidget_UnsetLocale")]
	public static extern void QWidget_UnsetLocale(void* c_this);
	[LinkName("QWidget_IsRightToLeft")]
	public static extern bool QWidget_IsRightToLeft(void* c_this);
	[LinkName("QWidget_IsLeftToRight")]
	public static extern bool QWidget_IsLeftToRight(void* c_this);
	[LinkName("QWidget_SetFocus")]
	public static extern void QWidget_SetFocus(void* c_this);
	[LinkName("QWidget_IsActiveWindow")]
	public static extern bool QWidget_IsActiveWindow(void* c_this);
	[LinkName("QWidget_ActivateWindow")]
	public static extern void QWidget_ActivateWindow(void* c_this);
	[LinkName("QWidget_ClearFocus")]
	public static extern void QWidget_ClearFocus(void* c_this);
	[LinkName("QWidget_SetFocusWithReason")]
	public static extern void QWidget_SetFocusWithReason(void* c_this, int64 reason);
	[LinkName("QWidget_FocusPolicy")]
	public static extern int64 QWidget_FocusPolicy(void* c_this);
	[LinkName("QWidget_SetFocusPolicy")]
	public static extern void QWidget_SetFocusPolicy(void* c_this, int64 policy);
	[LinkName("QWidget_HasFocus")]
	public static extern bool QWidget_HasFocus(void* c_this);
	[LinkName("QWidget_SetTabOrder")]
	public static extern void QWidget_SetTabOrder(QWidget param1, QWidget param2);
	[LinkName("QWidget_SetFocusProxy")]
	public static extern void QWidget_SetFocusProxy(void* c_this, QWidget focusProxy);
	[LinkName("QWidget_FocusProxy")]
	public static extern QWidget QWidget_FocusProxy(void* c_this);
	[LinkName("QWidget_ContextMenuPolicy")]
	public static extern int64 QWidget_ContextMenuPolicy(void* c_this);
	[LinkName("QWidget_SetContextMenuPolicy")]
	public static extern void QWidget_SetContextMenuPolicy(void* c_this, int64 policy);
	[LinkName("QWidget_GrabMouse")]
	public static extern void QWidget_GrabMouse(void* c_this);
	[LinkName("QWidget_GrabMouseWithQCursor")]
	public static extern void QWidget_GrabMouseWithQCursor(void* c_this, QCursor param1);
	[LinkName("QWidget_ReleaseMouse")]
	public static extern void QWidget_ReleaseMouse(void* c_this);
	[LinkName("QWidget_GrabKeyboard")]
	public static extern void QWidget_GrabKeyboard(void* c_this);
	[LinkName("QWidget_ReleaseKeyboard")]
	public static extern void QWidget_ReleaseKeyboard(void* c_this);
	[LinkName("QWidget_GrabShortcut")]
	public static extern int32 QWidget_GrabShortcut(void* c_this, QKeySequence key);
	[LinkName("QWidget_ReleaseShortcut")]
	public static extern void QWidget_ReleaseShortcut(void* c_this, int32 id);
	[LinkName("QWidget_SetShortcutEnabled")]
	public static extern void QWidget_SetShortcutEnabled(void* c_this, int32 id);
	[LinkName("QWidget_SetShortcutAutoRepeat")]
	public static extern void QWidget_SetShortcutAutoRepeat(void* c_this, int32 id);
	[LinkName("QWidget_MouseGrabber")]
	public static extern QWidget QWidget_MouseGrabber();
	[LinkName("QWidget_KeyboardGrabber")]
	public static extern QWidget QWidget_KeyboardGrabber();
	[LinkName("QWidget_UpdatesEnabled")]
	public static extern bool QWidget_UpdatesEnabled(void* c_this);
	[LinkName("QWidget_SetUpdatesEnabled")]
	public static extern void QWidget_SetUpdatesEnabled(void* c_this, bool enable);
	[LinkName("QWidget_GraphicsProxyWidget")]
	public static extern QGraphicsProxyWidget QWidget_GraphicsProxyWidget(void* c_this);
	[LinkName("QWidget_Update")]
	public static extern void QWidget_Update(void* c_this);
	[LinkName("QWidget_Repaint")]
	public static extern void QWidget_Repaint(void* c_this);
	[LinkName("QWidget_Update2")]
	public static extern void QWidget_Update2(void* c_this, int32 x, int32 y, int32 w, int32 h);
	[LinkName("QWidget_UpdateWithQRect")]
	public static extern void QWidget_UpdateWithQRect(void* c_this, QRect param1);
	[LinkName("QWidget_UpdateWithQRegion")]
	public static extern void QWidget_UpdateWithQRegion(void* c_this, QRegion param1);
	[LinkName("QWidget_Repaint2")]
	public static extern void QWidget_Repaint2(void* c_this, int32 x, int32 y, int32 w, int32 h);
	[LinkName("QWidget_RepaintWithQRect")]
	public static extern void QWidget_RepaintWithQRect(void* c_this, QRect param1);
	[LinkName("QWidget_RepaintWithQRegion")]
	public static extern void QWidget_RepaintWithQRegion(void* c_this, QRegion param1);
	[LinkName("QWidget_SetVisible")]
	public static extern void QWidget_SetVisible(void* c_this, bool visible);
	[LinkName("QWidget_SetHidden")]
	public static extern void QWidget_SetHidden(void* c_this, bool hidden);
	[LinkName("QWidget_Show")]
	public static extern void QWidget_Show(void* c_this);
	[LinkName("QWidget_Hide")]
	public static extern void QWidget_Hide(void* c_this);
	[LinkName("QWidget_ShowMinimized")]
	public static extern void QWidget_ShowMinimized(void* c_this);
	[LinkName("QWidget_ShowMaximized")]
	public static extern void QWidget_ShowMaximized(void* c_this);
	[LinkName("QWidget_ShowFullScreen")]
	public static extern void QWidget_ShowFullScreen(void* c_this);
	[LinkName("QWidget_ShowNormal")]
	public static extern void QWidget_ShowNormal(void* c_this);
	[LinkName("QWidget_Close")]
	public static extern bool QWidget_Close(void* c_this);
	[LinkName("QWidget_Raise")]
	public static extern void QWidget_Raise(void* c_this);
	[LinkName("QWidget_Lower")]
	public static extern void QWidget_Lower(void* c_this);
	[LinkName("QWidget_StackUnder")]
	public static extern void QWidget_StackUnder(void* c_this, QWidget param1);
	[LinkName("QWidget_Move")]
	public static extern void QWidget_Move(void* c_this, int32 x, int32 y);
	[LinkName("QWidget_MoveWithQPoint")]
	public static extern void QWidget_MoveWithQPoint(void* c_this, QPoint param1);
	[LinkName("QWidget_Resize")]
	public static extern void QWidget_Resize(void* c_this, int32 w, int32 h);
	[LinkName("QWidget_ResizeWithQSize")]
	public static extern void QWidget_ResizeWithQSize(void* c_this, QSize param1);
	[LinkName("QWidget_SetGeometry")]
	public static extern void QWidget_SetGeometry(void* c_this, int32 x, int32 y, int32 w, int32 h);
	[LinkName("QWidget_SetGeometryWithGeometry")]
	public static extern void QWidget_SetGeometryWithGeometry(void* c_this, QRect geometry);
	[LinkName("QWidget_SaveGeometry")]
	public static extern uint8[] QWidget_SaveGeometry(void* c_this);
	[LinkName("QWidget_RestoreGeometry")]
	public static extern bool QWidget_RestoreGeometry(void* c_this, uint8[] geometry);
	[LinkName("QWidget_AdjustSize")]
	public static extern void QWidget_AdjustSize(void* c_this);
	[LinkName("QWidget_IsVisible")]
	public static extern bool QWidget_IsVisible(void* c_this);
	[LinkName("QWidget_IsVisibleTo")]
	public static extern bool QWidget_IsVisibleTo(void* c_this, QWidget param1);
	[LinkName("QWidget_IsHidden")]
	public static extern bool QWidget_IsHidden(void* c_this);
	[LinkName("QWidget_IsMinimized")]
	public static extern bool QWidget_IsMinimized(void* c_this);
	[LinkName("QWidget_IsMaximized")]
	public static extern bool QWidget_IsMaximized(void* c_this);
	[LinkName("QWidget_IsFullScreen")]
	public static extern bool QWidget_IsFullScreen(void* c_this);
	[LinkName("QWidget_WindowState")]
	public static extern int64 QWidget_WindowState(void* c_this);
	[LinkName("QWidget_SetWindowState")]
	public static extern void QWidget_SetWindowState(void* c_this, int64 state);
	[LinkName("QWidget_OverrideWindowState")]
	public static extern void QWidget_OverrideWindowState(void* c_this, int64 state);
	[LinkName("QWidget_SizeHint")]
	public static extern QSize QWidget_SizeHint(void* c_this);
	[LinkName("QWidget_MinimumSizeHint")]
	public static extern QSize QWidget_MinimumSizeHint(void* c_this);
	[LinkName("QWidget_SizePolicy")]
	public static extern QSizePolicy QWidget_SizePolicy(void* c_this);
	[LinkName("QWidget_SetSizePolicy")]
	public static extern void QWidget_SetSizePolicy(void* c_this, QSizePolicy sizePolicy);
	[LinkName("QWidget_SetSizePolicy2")]
	public static extern void QWidget_SetSizePolicy2(void* c_this, int64 horizontal, int64 vertical);
	[LinkName("QWidget_HeightForWidth")]
	public static extern int32 QWidget_HeightForWidth(void* c_this, int32 param1);
	[LinkName("QWidget_HasHeightForWidth")]
	public static extern bool QWidget_HasHeightForWidth(void* c_this);
	[LinkName("QWidget_VisibleRegion")]
	public static extern QRegion QWidget_VisibleRegion(void* c_this);
	[LinkName("QWidget_SetContentsMargins")]
	public static extern void QWidget_SetContentsMargins(void* c_this, int32 left, int32 top, int32 right, int32 bottom);
	[LinkName("QWidget_SetContentsMarginsWithMargins")]
	public static extern void QWidget_SetContentsMarginsWithMargins(void* c_this, QMargins margins);
	[LinkName("QWidget_ContentsMargins")]
	public static extern QMargins QWidget_ContentsMargins(void* c_this);
	[LinkName("QWidget_ContentsRect")]
	public static extern QRect QWidget_ContentsRect(void* c_this);
	[LinkName("QWidget_Layout")]
	public static extern QLayout QWidget_Layout(void* c_this);
	[LinkName("QWidget_SetLayout")]
	public static extern void QWidget_SetLayout(void* c_this, QLayout layout);
	[LinkName("QWidget_UpdateGeometry")]
	public static extern void QWidget_UpdateGeometry(void* c_this);
